[gd_scene load_steps=6 format=3 uid="uid://b7m3n44ang7rk"]

[ext_resource type="Script" path="res://scripts/scene_transition.gd" id="1_g1oee"]

[sub_resource type="Animation" id="Animation_2h62o"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Transition/ColorRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_88ehg"]
resource_name = "fadeIn"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Transition/ColorRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_c56o1"]
resource_name = "fadeOut"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Transition/ColorRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nu5vy"]
_data = {
"RESET": SubResource("Animation_2h62o"),
"fadeIn": SubResource("Animation_88ehg"),
"fadeOut": SubResource("Animation_c56o1")
}

[node name="SceneTransition" type="Node2D"]
z_index = 2
script = ExtResource("1_g1oee")

[node name="Transition" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_nu5vy")
}

[node name="ColorRect" type="ColorRect" parent="Transition"]
z_index = 2
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="Timer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[node name="TimerEnd" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="TimerEnd" to="." method="_on_timer_end_timeout"]
